--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -15,11 +15,26 @@ body {
   justify-content: center;
 }
 
+.header {
+  font-size: larger;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+  display: flex;
+  gap: 16px;
+}
+
+.header, .text {
+  margin-bottom: 16px;
 }
 
 .icon {
@@ -33,6 +48,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -54,6 +70,7 @@ button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  align-self: flex-start;
 }
 
 button.continue {
